# FishOS

./: .clang-format  .gitignore  CMakeLists.txt  README.md
FSH/: CMakeLists.txt  Platform.h  Types.h  Utility.h
Kernel/: CMakeLists.txt  Kernel.cpp  Multiboot.h  StdLib.cpp  StdLib.h  multiboot2.h
Kernel/Arch/i686/: VGA.h  boot.S  linker.ld
Kernel/Arch/x86_64/: VGA.h  boot.S  linker.ld
Kernel/Drivers/: VGA.h
Kernel/Drivers/Serial/: Serial.cpp  Serial.h
Kernel/Drivers/TTY/: TTY.cpp  TTY.h
Kernel/Interrupts/: GDT.cpp  IDT.cpp  IDT.h  IRQ.cpp  IRQ.h  ISR.cpp  ISR.h  Interrupts.cpp  Interrupts.h
Kernel/Memory/: Address.h
Kernel/TTY/: TTY.cpp  TTY.h
Libraries/: CMakeLists.txt
Libraries/LibC/: CMakeLists.txt  ctri.S  limits.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.cpp  stdio.h  stdlib.cpp  stdlib.h  string.cpp  string.h
Libraries/LibC/sys/: cdefs.h  io.h  types.h
Misc/: grub.cfg
Tests/FSH/: Utility.cpp
Tests/Kernel/: Interrupts.cpp
Toolchain/: .gitignore  Build.sh
